# hello-cachix

./: CHANGELOG.md  flake.nix
.github/workflows/: test.yml
bar/: bar.cabal
bar/app/: Main.hs
bar/src/: Bar.hs
bar/test/: Spec.hs
foo/: foo.cabal
foo/app/: Main.hs
foo/src/: Foo.hs
foo/test/: Spec.hs
