cabal-version:      2.4
name:               bar
version:            0.1.0.0

maintainer:         blinky@foam.space

extra-source-files: CHANGELOG.md

library
    exposed-modules:  Bar

    default-extensions:
      DerivingStrategies
      DerivingVia
      DeriveGeneric
      StandaloneDeriving
    build-depends:    base,
                      aeson,
                      QuickCheck,
                      generic-arbitrary,
                      foo
    hs-source-dirs:   src
    default-language: Haskell2010

executable bar
    main-is:          Main.hs
    build-depends:
        base,
        bar

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  ghc-options: -threaded -rtsopts
  hs-source-dirs: test
  build-depends:
    base,
    bar,
    aeson,
    hspec,
    QuickCheck
