cabal-version:      2.4
name:               foo
version:            0.1.0.0

maintainer:         martyall@proton.me

extra-source-files: CHANGELOG.md

library
    exposed-modules:  Foo
    default-extensions:
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      StandaloneDeriving
    build-depends:    base,
                      aeson,
                      QuickCheck,
                      generic-arbitrary
    hs-source-dirs:   src
    default-language: Haskell2010

executable foo
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        foo

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  ghc-options: -threaded -rtsopts
  hs-source-dirs: test
  build-depends:
    base,
    foo,
    aeson,
    hspec,
    QuickCheck
